# snake-game

./: README.md  food.py  main.py  pyproject.toml  scoreboard.py  snake.py
